add create form

--- a/fisa_django/blog/templates/blog/base.html
+++ b/fisa_django/blog/templates/blog/base.html
@@ -37,6 +37,7 @@
     </nav>
 </div>
 
+<!-- 여기 사이는 값이 계속 변할 내용 -->
 {% block page_area %}
 
 {% endblock %}
@@ -49,7 +50,7 @@
             <div class="col-auto">
                 <span class="text-white mx-1">khhys3@naver.com</span>
                 <span class="text-white mx-1">&middot;</span>
-                <a class="link-light small" href="mailto:atangi@naver.com">Contact</a>
+                <a class="link-light small" href="mailto:khhys3@naver.com">Contact</a>
             </div>
         </div>
     </div>
