--- a/fisa_django/blog/templates/blog/post_list.html
+++ b/fisa_django/blog/templates/blog/post_list.html
@@ -1,6 +1,15 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 {% block page_area %}
+
+<style>
+    .fixed-top-right {
+        position: fixed;
+        top: 10;
+        right: 0;
+        z-index: 999; 
+    }
+</style>
 <div class="row d-flex justify-content-center">
     <div class="col-1 offset-8">
         {% if user.is_authenticated %}   
@@ -12,7 +21,7 @@
         <!-- bootstrap에서 card 가져오기 -->
         <div class="card d-flex justify-content-between" style="width: 60rem;">
             {% if p.head_image %}
-            <img src="{{ p.head_image.url}}" class="card-img-top" alt="...">
+            <img src="{{ p.head_image.url}}" class="card-img-top" style="aspect-ratio: 10/1; object-fit: cover;" alt="...">
             <!-- 장고는 이미지 업로드를 위한 ImageField를 제공함.  -->
             {% endif %}
             <div class="card-body">
@@ -30,6 +39,7 @@
 
     
     <!-- 페이지네이션 -->
+    {% if page_obj.exists %}
     <nav aria-label="Page navigation" class="mb-15">
         <ul class="pagination justify-content-center">
             {% if page_obj.has_previous %}
@@ -63,5 +73,10 @@
             {% endif %}
         </ul>
     </nav>
+{% else %}
+{% endif %}
 
+<div class="widget col-2 fixed-top-right">
+        {% include 'blog/search_widget.html' %}
+    </div>
 {% endblock %}
