--- a/fisa_django/blog/templates/blog/post_list.html
+++ b/fisa_django/blog/templates/blog/post_list.html
@@ -10,36 +10,43 @@
         z-index: 999; 
     }
 </style>
-<div class="row d-flex justify-content-center">
-    <div class="col-1 offset-8">
-        {% if user.is_authenticated %}   
-            <a class="btn btn-secondary" href="{% url 'blog_app:create' %}" role="button">글쓰기</a>&nbsp;&nbsp;          
-        {% endif %}
+    <div class="row d-flex justify-content-center">
+        <div class="col-1 offset-8">
+            {% if user.is_authenticated %}   
+                <a class="btn btn-secondary" href="{% url 'blog_app:create' %}" role="button">글쓰기</a>&nbsp;&nbsp;          
+            {% endif %}
+        </div>
     </div>
 
+    <div class="row d-flex justify-content-center">
         {% for p in post_list %}
-        <!-- bootstrap에서 card 가져오기 -->
-        <div class="card d-flex justify-content-between" style="width: 60rem;">
-            {% if p.head_image %}
-            <img src="{{ p.head_image.url}}" class="card-img-top" style="aspect-ratio: 10/1; object-fit: cover;" alt="...">
-            <!-- 장고는 이미지 업로드를 위한 ImageField를 제공함.  -->
-            {% endif %}
-            <div class="card-body">
-            <h5 class="card-title"><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h5>
-            <h6> {{ p.created_at }} </h6>
-            <p class="card-text">{{ p.content }}</p>
-            <div class="card-end"> 
-            <span>{{ p.author }}</span>
-            <a href="{{ p.get_absolute_url }}" class="btn btn-dark">더 보기</a>
+        <div class="col-10">
+            <!-- bootstrap에서 card 가져오기 -->
+            <div class="card d-flex justify-content-between" style="width: 60rem;">
+                {% if p.head_image %}
+                <img src="{{ p.head_image.url}}" class="card-img-top" style="aspect-ratio: 10/1; object-fit: cover;" alt="...">
+                <!-- 장고는 이미지 업로드를 위한 ImageField를 제공함.  -->
+                {% endif %}
+                <div class="card-body">
+                <h5 class="card-title"><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h5>
+                <h6> {{ p.created_at }} </h6>
+                <p class="card-text">{{ p.content }}</p>
+                <div class="card-end"> 
+                <span>{{ p.author }}</span>
+                <a href="{{ p.get_absolute_url }}" class="btn btn-dark">더 보기</a>
+                </div>
             </div>
         </div>
     </div>
+
     {% endfor %}
-
-
+        <div class="widget col-2 fixed-top-right">
+            {% include 'blog/search_widget.html' %}
+        </div>
+    </div>
     
     <!-- 페이지네이션 -->
-    {% if page_obj.exists %}
+    {# {% if page_obj.exists %} #} 
     <nav aria-label="Page navigation" class="mb-15">
         <ul class="pagination justify-content-center">
             {% if page_obj.has_previous %}
@@ -73,10 +80,9 @@
             {% endif %}
         </ul>
     </nav>
-{% else %}
-{% endif %}
+    
+    {# {% else %} #}
+    {# {% endif %} #}
 
-<div class="widget col-2 fixed-top-right">
-        {% include 'blog/search_widget.html' %}
-    </div>
+
 {% endblock %}
